chore(Linguist): enable Markdown files detection

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,6 @@
 config.js linguist-detectable=false
 *.config.js linguist-detectable=false
 jest.*.js linguist-detectable=false
+
+*.md linguist-detectable=true
+*.md linguist-documentation=false
