--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,9 +30,9 @@ jobs:
           architecture: ${{ matrix.architecture }}
           registry-url: https://registry.npmjs.org/
           cache: 'yarn'
-      - name: Installation
+      - name: Install dependencies
         run: |
           yarn
-      - name: Building work
+      - name: Build package
         run: |
           yarn build
