--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,7 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
   "assignees": ["sabertazimi"],
-  "dependencyDashboard": false,
+  "dependencyDashboard": true,
   "labels": ["dependencies"],
   "packageRules": [
     {
