--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    name: Building on Node ${{ matrix.node-version }} ${{ matrix.os }} ${{ matrix.architecture }}
+    name: Building
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
