--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -44,7 +44,7 @@ body:
     id: alternatives
     attributes:
       label: Alternatives
-      description: Clear and concise description of any alternative solutions or features you've considered.
+      description: A clear and concise description of any alternative solutions or features you've considered.
       placeholder: Alternatives '...'
   - type: textarea
     id: additional-context
