chore(npm): update scripts name

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "sabertazimi <sabertazimi@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "prelease": "standard-version --dry-run -s",
+    "changeset": "standard-version --dry-run -s",
     "release": "standard-version -s",
     "build": "echo Building work."
   },
