--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "author": "sabertazimi <sabertazimi@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "changeset": "standard-version --dry-run -s",
-    "release": "standard-version -s",
+    "changeset": "commit-and-tag-version --dry-run -s",
+    "release": "commit-and-tag-version -s",
     "build": "echo Building work."
   },
   "packageManager": "yarn@3.4.1",
   "devDependencies": {
-    "standard-version": "^9.5.0"
+    "commit-and-tag-version": "^11.1.0"
   }
 }
