--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "release": "commit-and-tag-version -s",
     "build": "echo Building work."
   },
-  "packageManager": "yarn@4.1.0",
+  "packageManager": "pnpm@8.15.4",
   "devDependencies": {
     "commit-and-tag-version": "^12.2.0"
   }
