ci: setup latest LTS Node.js

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        node-version: [20]
+        node-version: [lts/*]
         architecture: [x64]
     steps:
       - name: Checkout repository
@@ -31,6 +31,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+          check-latest: true
           architecture: ${{ matrix.architecture }}
           registry-url: https://registry.npmjs.org/
           cache: 'pnpm'
@@ -55,7 +56,8 @@ jobs:
       - name: Setup Node environment
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: lts/*
+          check-latest: true
           architecture: x64
           registry-url: https://registry.npmjs.org/
       - name: Release to GitHub
