--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -2,6 +2,7 @@ name: Feature request
 description: Suggest an idea for this project
 labels:
   - enhancement
+  - feature
   - 'todo :spiral_notepad:'
 assignees: sabertazimi
 body:
